--- a/index.html
+++ b/index.html
@@ -368,14 +368,11 @@
           </div>
           <!--1st project-->
           <div class="col-6 d-none d-lg-block d-xl-block">
-            <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-2c08e5f7-8f3b-440c-b9a5-8ad15609015e/projects/418137"
-              target="_blank"
-            >
+            <a href="https://uncaught-error.netlify.app/" target="_blank">
               <img
                 class="project-one img-fluid"
-                src="./images/utube.png"
-                alt="Image of Joe Hisaishi website"
+                src="./images/error.png"
+                alt="Image of Uncaught-Error website"
             /></a>
           </div>
           <!--1st project mobile-->
@@ -388,14 +385,11 @@
             "
             align="center"
           >
-            <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-2c08e5f7-8f3b-440c-b9a5-8ad15609015e/projects/418137"
-              target="_blank"
-            >
+            <a href="https://uncaught-error.netlify.app/" target="_blank">
               <img
                 class="project-one-mobile img-fluid"
-                src="./images/utube.png"
-                alt="Image of Joe Hisaishi website"
+                src="./images/error.png"
+                alt="Image of Uncaught-Error website"
               />
             </a>
           </div>
