--- a/contact.html
+++ b/contact.html
@@ -134,12 +134,12 @@
                 <div class="col-4 margin-mobile-instagram">
                   <a
                     class="link-email"
-                    href="https://www.instagram.com/mili.codes/"
+                    href="https://www.instagram.com/nishchaywankar/"
                     ><i class="fab fa-instagram"></i
                   ></a>
                 </div>
                 <div class="col-4">
-                  <a class="link-email" href="https://twitter.com/milicodes"
+                  <a class="link-email" href="https://t.me/nishchaywankar"
                     ><i class="fab fa-telegram"></i
                   ></a>
                 </div>
