--- a/index.html
+++ b/index.html
@@ -659,10 +659,10 @@
             >
               <div class="card shadow-green">
                 <div class="card-body" align="center">
-                  <h5 class="card-title card-green">Music & Games</h5>
+                  <h5 class="card-title card-green">Music & Reading</h5>
                   <p class="card-info">
-                    Music Producer, pianist and singer in my freetime. I also
-                    enjoy playing videogames as a hobby
+                    Music Producer, pianist and singer in my freetime. Also,I
+                    like reading as a hobby.
                   </p>
                 </div>
               </div>
@@ -673,10 +673,10 @@
             >
               <div class="card shadow-green">
                 <div class="card-body" align="center">
-                  <h5 class="card-title card-green">Music & Games</h5>
+                  <h5 class="card-title card-green">Music & Reading</h5>
                   <p class="card-info">
-                    Music Producer, pianist and singer in my freetime. I also
-                    enjoy playing videogames as a hobby
+                    Music Producer, pianist and singer in my freetime. Also,I
+                    like reading as a hobby.
                   </p>
                 </div>
               </div>
@@ -687,10 +687,10 @@
             >
               <div class="card shadow-green">
                 <div class="card-body" align="center">
-                  <h5 class="card-title card-green">Music & Games</h5>
+                  <h5 class="card-title card-green">Music & Reading</h5>
                   <p class="card-info">
-                    Music Producer, pianist and singer in my freetime. I also
-                    enjoy playing videogames as a hobby
+                    Music Producer, pianist and singer in my freetime. Also,I
+                    like reading as a hobby.
                   </p>
                 </div>
               </div>
